# Pdf_Editor

backend/: pyproject.toml  render.yaml  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/v1/: routes_health.py  routes_pdf.py
backend/app/core/: config.py
backend/app/pdf_engine/: editor.py  finder.py  storage.py
backend/app/schemas/: pdf.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/editor/: page.jsx
frontend/app/editor/components/: EditSidebar.jsx  PdfViewer.jsx
frontend/app/editor/hooks/: usePdfEditor.js
frontend/lib/: api.js
