[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv]
python-preference = "only-system"
required-version = ">=0.8"
